force-app/main/default/objects/QuoteLineItem/fields/A_o__c.field-meta.xml
<CustomField>
    <fullName>A_o__c</fullName>
    <label>Año</label>
    <length>4</length>
    <type>Text</type>
</CustomField>