force-app/main/default/objects/QuoteLineItem/fields/Min_Order_Set__c.field-meta.xml
<CustomField>
    <fullName>Min_Order_Set__c</fullName>
    <label>Min Order Set (MT)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>