force-app/main/default/objects/QuoteLineItem/fields/Packing__c.field-meta.xml
<CustomField>
    <fullName>Packing__c</fullName>
    <label>Packing</label>
    <length>100</length>
    <type>Text</type>
</CustomField>