force-app/main/default/objects/QuoteLineItem/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prepayment</fullName>
            </value>
            <value>
                <fullName>Less than 30 days</fullName>
            </value>
            <value>
                <fullName>30 days</fullName>
            </value>
            <value>
                <fullName>45 days</fullName>
            </value>
            <value>
                <fullName>60 days</fullName>
            </value>
            <value>
                <fullName>75 days</fullName>
            </value>
            <value>
                <fullName>90 days</fullName>
            </value>
            <value>
                <fullName>120 days</fullName>
            </value>
            <value>
                <fullName>150 days</fullName>
            </value>
            <value>
                <fullName>180 days</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>