force-app/main/default/objects/QuoteLineItem/validationRules/Restricion_letras_ano.validationRule-meta.xml
<ValidationRule>
    <fullName>Restricion_letras_ano</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNUMBER( A_o__c ))</errorConditionFormula>
    <errorDisplayField>A_o__c</errorDisplayField>
    <errorMessage>No puede ingresar letras, solo números</errorMessage>
</ValidationRule>